Fri May 29 15:05:34 BST 2009  Tom Mortimer <tom@lemurconsulting.com>
    * docs/api.rst,
    * docs/tutorial/tutorial.rst: Update docs.
    * flax/flaxfield.php: Added FlaxTextField class.

Fri May 29 13:30:19 BST 2009  Tom Mortimer <tom@lemurconsulting.com>
    * unittests/test_search.php,
    * unittests/test_docs.php,
    * flax/flaxsearch.php,
    * flax/flaxclient.php: Implemented search results classes and 
      updated tests.

Fri May 29 11:45:07 BST 2009  Tom Mortimer <tom@lemurconsulting.com>
    * flax/flaxclient.php,
    * flax/flaxfield.php: Moved flaxFieldFromJSON into FlaxField class.

Fri May 29 09:32:23 BST 2009  Tom Mortimer <tom@lemurconsulting.com>
    * unittests/test_search.php,
    * unittests/test_fields.php,
    * unittests/test_docs.php,
    * flax/flaxjsonobject.php,
    * flax/flaxfield.php,
    * flax/flaxclient.php: Added classes for field types and updated tests.

Thu May 28 14:23:47 BST 2009  Tom Mortimer <tom@lemurconsulting.com>

    * unittests/test_search.php,
    * flax/flaxclient.php: Added searchSimilar() function and unittests
      contributed by Ian Barber <ian@ibuildings.nl>.

Fri May 22 17:16:20 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/flaxclient.php: Allow the / at the end of the base url to be
	  missed off.

Fri May 22 17:56:49 BST 2009  Tom Mortimer <tom@lemurconsulting.com>

    * test_database.php: Added test for "unusual" db name.

Fri May 22 17:27:34 BST 2009  Tom Mortimer <tom@lemurconsulting.com>

    * docs/tutorial/tutorial.php,
    * docs/tutorial/tutorial.rst,
    * README: finished tutorial.

Fri May 22 16:37:20 BST 2009  Tom Mortimer <tom@lemurconsulting.com>

    * docs/tutorial,
    * docs/tutorial/tutorial.rst: Beginnings of a tutorial.

Fri May 22 12:12:20 BST 2009  Tom Mortimer <tom@lemurconsulting.com>

    * examples/newsml_search.php,
    * examples/newsml_indexer.php: Fixed include paths.

Fri May 22 12:02:42 BST 2009  Tom Mortimer <tom@lemurconsulting.com>
